objects/PurchaseOrder__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CarrierNumber__c</fullName>
        <label>Carrier Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Carrier)</relationshipLabel>
        <relationshipName>Carriers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hedge__c</fullName>
        <label>Hedge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_AddressNumber__c</fullName>
        <label>PO AddressNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_DeliveryInstructionsLine1__c</fullName>
        <label>PO Delivery Instructions Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_DeliveryInstructionsLine2__c</fullName>
        <label>PO Delivery Instructions Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_FreightHandlingCode__c</fullName>
        <label>PO Freight Handling Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_HeaderKey__c</fullName>
        <externalId>true</externalId>
        <label>PO HeaderKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_HoldCode__c</fullName>
        <label>PO Hold Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_OrderedBy__c</fullName>
        <label>PO Ordered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PaymentTerms__c</fullName>
        <label>PO Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Reference__c</fullName>
        <label>PO Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedOrder__c</fullName>
        <label>Related Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipFromSupplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Ship From Supplier)</relationshipLabel>
        <relationshipName>ShipFromSuppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship From</label>
        <referenceTo>SupplierShipToAddress__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Ship To Customer)</relationshipLabel>
        <relationshipName>Purchase_OrdersST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>AccountShiptoAddress__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_SO__c</fullName>
        <label>Supplier SO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>